--- a/styles.css
+++ b/styles.css
@@ -14,5 +14,12 @@ body {
 
 .container {
 	margin: 0 auto;
+	padding: 1em;
+	
+	max-width: 64em;
+	
+	color: #ffffff;
 	background-color: #1f1f1f;
+	
+	font-family: monospace;
 }
