--- a/styles.css
+++ b/styles.css
@@ -21,13 +21,13 @@ body {
 	
 	max-width: 64em;
 	
-	color: #ffffff;
+	color: #efefef;
 	background-color: #1f1f1f;
 	
 	font-family: 'Source Code Pro',monospace;
 }
 
 h1 {
-	font-size: 4em;
+	font-size: 2.5em;
 	font-weight: bold;
 }
