--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,11 @@ h1 {
 	font-size: 2.5em;
 	font-weight: bold;
 }
+
+img {
+	margin: 0 auto;
+	display: block;
+	
+	height: auto;
+	max-width: 100%;
+}
