--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,21 @@ body {
 	background-color: #000000;
 }
 
+h1 {
+	font-size: 2.5em;
+	font-weight: bold;
+}
+
+img {
+	margin: 0 auto;
+	display: block;
+	
+	height: auto;
+	max-width: 100%;
+}
+
+/* Classes */
+
 .container {
 	margin: 1em auto;
 	padding: 1em;
@@ -27,15 +42,7 @@ body {
 	font-family: 'Source Code Pro',monospace;
 }
 
-h1 {
-	font-size: 2.5em;
-	font-weight: bold;
-}
-
-img {
-	margin: 0 auto;
-	display: block;
-	
-	height: auto;
-	max-width: 100%;
+.fullwidth {
+	padding: 0;
+	margin: 0;
 }
