--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,17 @@ h1:after {
 }
 
 @keyframes cursorBlink {
+	0% {
+		opacity: 0;
+	}
 	25% {
 		opacity: 0;
 	}
 	75% {
 		opacity: 1;
+	}
+	100% {
+		opacity: 0;
 	}
 }
 
