--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,12 @@ h1:after, .cursorBlink:after {
 	color: #ffffff;
 	opacity: 1;
 	
-	animation: ease-in-out 1s infinite alternate cursorBlink;
+	animation: ease-in-out 1s infinite cursorBlink;
 }
 
 @keyframes cursorBlink {
 	0% {
-		opacity: 0;
+		opacity: 1;
 	}
 	50% {
 		opacity: 1;
