--- a/_includes/head2.html
+++ b/_includes/head2.html
@@ -2,6 +2,17 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link type="text/css" rel="stylesheet" href="styles.css" />
+		<script>
+			window.onload = function() {
+				typing = document.getElementById("typing");
+				
+				document.keydown = function(e) {
+					var key = String.fromCharCode(e.keyCode);
+					if (/[a-zA-Z0-9-_ ]/.test(key))
+						typing.innerHTML = typing.innerHTML + key;
+				}
+			}
+		</script>
 	</head>
 	<body>
 		<div class="container">
