--- a/_includes/head2.html
+++ b/_includes/head2.html
@@ -3,14 +3,16 @@
 		<meta name="viewport" content="width=device-width" />
 		<link type="text/css" rel="stylesheet" href="styles.css" />
 		<script>
+			var typing;
+			
 			window.onload = function() {
 				typing = document.getElementById("typing");
-				
-				document.onkeypress = function(e) {
-					var key = String.fromCharCode(e.keyCode);
-					if (/[a-zA-Z0-9-_ ]/.test(key))
-						typing.innerHTML = typing.innerHTML + key;
-				}
+			}
+			
+			document.onkeypress = function(e) {
+				var key = String.fromCharCode(e.keyCode);
+				if (/[a-zA-Z0-9-_ ]/.test(key))
+					typing.innerHTML = typing.innerHTML + key;
 			}
 		</script>
 	</head>
