--- a/_includes/head2.html
+++ b/_includes/head2.html
@@ -11,8 +11,13 @@
 			
 			document.onkeypress = function(e) {
 				var key = String.fromCharCode(e.keyCode);
-				if (/[a-zA-Z0-9-_ ]/.test(key))
+				
+				console.log(key);
+				
+				if (/[a-zA-Z0-9-_ ]/.test(key)) {
+					typing.style.wordWrap = "break-word";
 					typing.innerHTML = typing.innerHTML + key;
+				}
 			}
 		</script>
 	</head>
