--- a/_includes/head2.html
+++ b/_includes/head2.html
@@ -12,6 +12,8 @@
 			document.onkeypress = function(e) {
 				var key = String.fromCharCode(e.charCode);
 				
+				console.log(e.charCode);
+				
 				if (/^[\u0020-\u007e\u00a0-\u00ff]*$/.test(key)) {
 					typing.style.wordWrap = "break-word";
 					typing.innerHTML = typing.innerHTML + key;
