--- a/_includes/head2.html
+++ b/_includes/head2.html
@@ -18,7 +18,7 @@
 					typing.style.wordWrap = "break-word";
 					typing.innerHTML = typing.innerHTML + key;
 				} else if (e.keyCode == 8 && typing.innerHTML.length > 0) {
-					typing.innerHTML = typing.innerHTML.substring(0, innerHTML.length - 2);
+					typing.innerHTML = typing.innerHTML.substring(0, typing.innerHTML.length - 2);
 				}
 			}
 		</script>
