--- a/_includes/head2.html
+++ b/_includes/head2.html
@@ -18,7 +18,7 @@
 				} else if (e.keyCode == 8 && typing.innerHTML.length > 0) {
 					typing.innerHTML = typing.innerHTML.substring(0, typing.innerHTML.length - 1);
 				} else if (e.keyCode == 13) {
-					typing.innerHTML = typing.innerHTML + "\n";
+					typing.innerHTML = typing.innerHTML + "<br />";
 				}
 				e.preventDefault();
 			}
