--- a/styles.css
+++ b/styles.css
@@ -88,3 +88,10 @@ a:hover {
 	padding: 0;
 	margin: 0;
 }
+
+/* media stuff */
+@media (max-width: 1024px) {
+	.container {
+		margin: 0 auto;
+	}
+}
