--- a/_includes/head2.html
+++ b/_includes/head2.html
@@ -2,27 +2,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link type="text/css" rel="stylesheet" href="styles.css" />
-		<script>
-			var typing;
-			
-			window.onload = function() {
-				typing = document.getElementById("typing");
-			}
-			
-			document.onkeypress = function(e) {
-				var key = String.fromCharCode(e.charCode);
-				
-				if (/^[\u0020-\u007e\u00a0-\u00ff]*$/.test(key)) {
-					typing.style.wordWrap = "break-word";
-					typing.innerHTML = typing.innerHTML + key;
-				} else if (e.keyCode == 8 && typing.innerHTML.length > 0) {
-					typing.innerHTML = typing.innerHTML.substring(0, typing.innerHTML.length - 1);
-				} else if (e.keyCode == 13) {
-					typing.innerHTML = typing.innerHTML + "<br />";
-				}
-				e.preventDefault();
-			}
-		</script>
+		<script src="/typing.js"></script>
 	</head>
 	<body>
 		<div class="container">
