--- a/_includes/head2.html
+++ b/_includes/head2.html
@@ -1,7 +1,7 @@
 </title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link type="text/css" rel="stylesheet" href="styles.css" />
+		<link type="text/css" rel="stylesheet" href="/styles.css" />
 		<script src="/typing.js"></script>
 	</head>
 	<body>
