--- a/css/styles.css
+++ b/css/styles.css
@@ -11,19 +11,29 @@
 
 /* Layout */
 
-body {
+head, body {
 	background-color: black;
+	
+	font-family: cursive;
 }
 
-h1 {
-	font-size: 2.5em;
+h1, h2, h3, h4, h5 {
 	font-weight: bold;
 	
 	word-break: break-word;
 	
-	font-family: 'Source Code Pro', monospace;
+	font-family: "Source Code Pro", monospace;
 }
-h1:not(:first-child) {
+h1 { font-size: 2.5em; }
+h2 { font-size: 2em; }
+h3 { font-size: 1.75em; }
+h4 { font-size: 1.5em; }
+h5 { font-size: 1.25em; }
+h1:not(:first-child),
+h2:not(:first-child),
+h3:not(:first-child),
+h4:not(:first-child),
+h5:not(:first-child) {
 	margin-top: .5rem;
 }
 
@@ -93,19 +103,16 @@ a:hover {
 .parallax {
 	display: block;
 	
-	height: 75vh;
+	height: 100vh;
 	
 	background-image: linear-gradient(#1f1f1f, black);
 	
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: 100%;
+	background-size: cover;
 	
 	transition: background-size 1s ease-in-out;
-}
-.parallax:hover {
-	background-size: 150%;
 }
 
 /* media stuff */
