Import from GitLab
Love GitLab, hate how much setup you have to do to get Jekyll working.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,4 @@
-<a href="https://github.com/TheV360">Github Profile</a>
+
+		<footer>
+			<p>Thank. &ndash; <span >&copy;2018</span> V360Tech</p>
+		</footer>
