--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,13 @@
-<h1>V360</h1>
-<div id="smallnav">
-	<img id="switchnav" src="/img/menu.png" />
-</div>
-<nav id="bignav">
-	<ul>
-		<li><a href="/">Home</a></li>
-		<li><a href="/404pls">404</a></li>
-	</ul>
-</nav>
+
+			<header>
+				<div class="container">
+					<h1>V360</h1>
+					<span id="toggle-nav" class="buttonlike"></span>
+					<nav id="header-nav">
+						<ul>
+							<li><a href="/">Home</a></li>
+							<li><a href="/blog">Blog</a></li>
+						</ul>
+					</nav>
+				</div>
+			</header>
