--- a/css/styles.css
+++ b/css/styles.css
@@ -1,123 +1,286 @@
-/* Fonts */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Source+Code+Pro');
+/* CSS By V360 */
+/* donut steel */
 
-/* Reset everything */
-
+/* Reset Styles */
 * {
 	margin: 0;
 	padding: 0;
 	border: 0;
+	outline: 0;
+
+	box-sizing: border-box;
 }
 
-/* Layout */
+html, body {
+	min-height: 100vh;
+}
 
-head, body {
+/* Variables here! */
+:root {
+	--text-color: #cfcfcf;
+	--link-color: #afcfff;
+	
+	--thin-border-size: .125rem;
+	--thin-border-color: #1f1f1f;
+}
+
+
+body {
+	color: var(--text-color);
+	background-color: #2f2f2f;
+	
+	font-family: "Open Sans", "Roboto", sans-serif;
+	
+	line-height: 1.6em;
+}
+
+/* Header Layout */
+header {
+	display: block;
+	position: sticky;
+	
+	top: 0;
+	
+	width: 100%;
+	height: 3rem;
+	
 	background-color: black;
 	
-	font-family: cursive;
+	overflow: hidden;
 }
 
-h1, h2, h3, h4, h5 {
-	font-weight: bold;
+header > div.container {
+	display: block;
 	
-	word-break: break-word;
+	padding: 0 .5rem;
 	
-	font-family: "Source Code Pro", monospace;
-}
-h1 { font-size: 2.5em; }
-h2 { font-size: 2em; }
-h3 { font-size: 1.75em; }
-h4 { font-size: 1.5em; }
-h5 { font-size: 1.25em; }
-h1:not(:first-child),
-h2:not(:first-child),
-h3:not(:first-child),
-h4:not(:first-child),
-h5:not(:first-child) {
-	margin-top: .5rem;
+	height: 3rem;
 }
 
-#typing:after {
-	content: "_";
+header > div.container > * {
+	display: inline-block;
 	
+	height: 3rem;
+	
+	vertical-align: top;
+	
+	line-height: 3rem;
+}
+
+header h1 {
+	float: left;
+	
+	margin: 0 .5rem;
+}
+
+header nav#header-nav,
+header #toggle-nav {
+	float: right;
+}
+
+header #toggle-nav {
+	display: none;
+	
+	margin: .5rem 0 .5rem .5rem;
+	
+	width: 2rem;
+	height: 2rem;
+	
+	background-image: url("../img/menu.png");
+	background-position: center;
+	background-size: 1.5rem;
+	background-repeat: no-repeat;
+}
+
+/* Section Layout */
+section > :last-child {
+	border-bottom: solid var(--thin-border-size) var(--thin-border-color);
+	
+	box-shadow: 0 .25rem .25rem -.25rem #1f1f1f;
+}
+
+footer {
+	margin: .5rem;
+	
+	text-align: center;
+	
+	font-size: .75rem;
+	
+	color: #7f7f7f;
+}
+
+/* Text layout */
+a {
+	color: var(--link-color);
+	
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+h1, h2, h3 {
 	color: white;
-	opacity: 1;
 	
-	animation: ease-in-out 1s infinite cursorBlink;
+	margin-bottom: .5rem;
+	
+	font-family: "SF Display", "Lato", "Roboto";
+	font-weight: 300;
+	font-weight: 100;
+	font-size: 2rem;
 }
 
-@keyframes cursorBlink {
-	0% {
-		opacity: 1;
-	}
-	50% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0;
-	}
-}
-
-p {
-	text-indent: 2em;
-}
+h1 { font-size: 2rem; font-weight: 300; font-weight: 100; }
+h2 { font-size: 2rem; font-weight: 300; font-weight: 200; }
+h3 { font-size: 1.75rem; font-weight: 300; }
 
 ul {
-	margin-left: 2.5em;
+	list-style-position: inside;
 }
 
-img {
-	margin: 0 auto;
+/* General nav layouts */
+nav ul,
+nav li {
+	display: inline-block;
+}
+
+nav li:not(:last-child)::after {
+	/* Bonus space because CSS afters are dumb */
+	content: " \2022  ";
+	
+	white-space: pre;
+}
+
+/* Containers */
+.container {
 	display: block;
 	
-	height: auto;
-	max-width: 100%;
-}
-
-/* Link colors */
-a:link {
-	color: #dfdfff;
-}
-a:visited {
-	color: #bfbfdf;
-}
-a:hover {
-	color: #bfdfff;
-}
-
-/* Classes */
-
-.container {
-	margin: 1rem auto;
+	margin: 0 auto;
+	
+	width: 100%;
 	
 	max-width: 64rem;
-	
-	color: #efefef;
-	background-color: #1f1f1f;
-}
-.container > :not(.parallax) {
-	padding: 1rem;
 }
 
-/* Parallax */
-.parallax {
+section .container {
+	padding: 1rem 2rem;
+	border-left: solid var(--thin-border-size) var(--thin-border-color);
+	border-right: solid var(--thin-border-size) var(--thin-border-color);
+	
+	background-color: #3f3f3f;
+}
+
+/* Buttonlikes */
+div.button-set {
+	display: block;
+	margin: .5rem 0;
+	
+	text-align: center;
+}
+
+.buttonlike {
+	display: inline-block;
+	
+	border: solid var(--thin-border-size) var(--thin-border-color);
+	border-radius: .5rem;
+	padding: .5rem .75rem;
+	
+	text-decoration: none;
+	
+	color: #cfcfcf;
+	background-color: #2f2f2f;
+	
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
+	
+	cursor: pointer;
+}
+
+.buttonlike.button-primary {
+	background-color: #1f3f7f;
+}
+
+.buttonlike:hover {
+	color: white;
+	background-color: #6f6f6f;
+	
+	text-decoration: none;
+}
+
+.buttonlike.button-primary:hover {
+	background-color: #3f7fff;
+}
+
+.buttonlike + .buttonlike {
+	margin-left: .25rem;
+}
+
+/* Grid 2x?s */
+ul.grid2 {
+	list-style-type: none;
+}
+
+ul.grid2 li {
+	display: inline-block;
+	
+	padding: 0 .5rem;
+	
+	border-bottom: solid var(--thin-border-size) var(--thin-border-color);
+	
+	width: 50%;
+	
+	text-align: center;
+}
+
+ul.grid2 li:nth-child(odd):not(:last-child) {
+	float: left;
+	
+	border-right: solid calc(var(--thin-border-size) / 2) var(--thin-border-color);
+}
+
+ul.grid2 li:nth-child(even) {
+	float: right;
+	
+	border-left: solid calc(var(--thin-border-size) / 2) var(--thin-border-color);
+}
+
+ul.grid2 li:last-child,
+ul.grid2 li:nth-last-child(2):nth-child(odd) {
+	border-bottom: none;
+}
+
+/* ClearFix */
+header::after,
+.container::after,
+.showcase::after,
+ul.grid2::after {
+	content: "";
+	
 	display: block;
 	
-	height: 100vh;
-	
-	background-image: linear-gradient(#1f1f1f, black);
-	
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	
-	transition: background-size 1s ease-in-out;
+	clear: both;
 }
 
-/* media stuff */
-@media (max-width: 1024px) {
+/* @medias */
+
+@media (max-width: 32rem) {
+	header #toggle-nav {
+		display: block;
+	}
+	
+	header nav#header-nav:not(.show-nav) {
+		display: none;
+	}
+	
+	.unimportant {
+		display: none;
+	}
+}
+@media (max-width: 64rem) {
 	.container {
-		margin: 0 auto;
+		border-left: none;
+		border-right: none;
 	}
 }
