added unnecessary scrollbar stuff, more consistent titles

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 	<head>
 		{% include headTags.html %}
-		<title>V360 &mdash; {{ page.title }}</title>
+		<title>V360 &ndash; {{ page.title }}</title>
 		<link rel="stylesheet" href="css/home.css" />
 		<link rel="stylesheet" href="css/showcase.css" />
 	</head>
