--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 	<head>
 		{% include headTags.html %}
-		<title>V360 &mdash; {{ page.title }}</title>
+		<title>V360 &ndash; {{ page.title }}</title>
 	</head>
 	<body>
 		{% include header.html %}
