--- a/_includes/headTags.html
+++ b/_includes/headTags.html
@@ -1,5 +1,5 @@
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <link rel="stylesheet" href="css/styles.css" />
-		<script src="js/script.js"></script>
-		<link rel="icon" href="favicon.png" />
+        <link rel="stylesheet" href="/css/styles.css" />
+		<script src="/js/script.js"></script>
+		<link rel="icon" href="/favicon.png" />
