--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,8 @@
 	<head>
 		{% include headTags.html %}
 		<title>V360 &ndash; {{ page.title }}</title>
-		<link rel="stylesheet" href="css/home.css" />
-		<link rel="stylesheet" href="css/showcase.css" />
+		<link rel="stylesheet" href="/css/home.css" />
+		<link rel="stylesheet" href="/css/showcase.css" />
 	</head>
 	<body>
 		{% include header.html %}
