--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 					<nav id="header-nav">
 						<ul>
 							<li><a href="/">Home</a></li>
-							<li><a href="/blog">Blog</a></li>
+							<li><a href="/blog/">Blog</a></li>
 						</ul>
 					</nav>
 				</div>
