--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,8 @@
 		{% include header.html %}
 		<section>
 			<div class="container">
+				<h2>{{ page.title }}</h2>
+				<aside>{{ page.date }}</aside>
 				{{ content }}
 			</div>
 		</section>
