--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,7 @@
 		<title>V360 &ndash; {{ page.title }}</title>
 		<link rel="stylesheet" href="/css/home.css" />
 		<link rel="stylesheet" href="/css/showcase.css" />
+		<script src="/js/home.js"></script>
 	</head>
 	<body>
 		{% include header.html %}
