--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,18 @@ h1 { font-size: 2rem; font-weight: 300; font-weight: 100; }
 h2 { font-size: 2rem; font-weight: 300; font-weight: 200; }
 h3 { font-size: 1.75rem; font-weight: 300; }
 
+hr {
+	background-color: #2f2f2f;
+}
+
+blockquote {
+	padding: .5rem;
+	
+	background-color: #474747;
+	
+	font-style: italic;
+}
+
 ul {
 	list-style-position: inside;
 }
