--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
 	<body>
 		{% include header.html %}
 		<section>
-			<div class="container">
+			<div class="container post">
 				<h2>{{ page.title }}</h2>
 				<aside>{{ page.date | date: "%B %d, %Y" }}</aside>
 				{{ content }}
