--- a/css/styles.css
+++ b/css/styles.css
@@ -174,12 +174,28 @@ hr {
 	background-color: #2f2f2f;
 }
 
+aside {
+	margin-bottom: .5rem;
+	
+	color: #afafaf;
+	
+	font-size: small;
+	font-style: italic;
+}
+
 blockquote {
 	padding: .5rem;
 	
 	background-color: #474747;
 	
 	font-style: italic;
+	text-indent: 1em;
+}
+
+.post p {
+	margin-bottom: .5rem;
+	
+	text-indent: 1em;
 }
 
 ul {
@@ -274,8 +290,7 @@ div.button-set {
 /* ClearFix */
 header::after,
 .container::after,
-.showcase::after,
-ul.grid2::after {
+.showcase::after {
 	content: "";
 	
 	display: block;
