--- a/css/styles.css
+++ b/css/styles.css
@@ -24,11 +24,13 @@ html, body {
 	
 	--thin-border-size: .125rem;
 	--thin-border-color: #1f1f1f;
+	
+	--text-indent: 2em;
 }
 
 body {
 	color: var(--text-color);
-	background-color: #2f2f2f;
+	background: #2f2f2f url("../assets/pattern.png");
 	
 	font-family: "Open Sans", "Roboto", sans-serif;
 	
@@ -89,7 +91,7 @@ header #toggle-nav {
 	width: 2rem;
 	height: 2rem;
 	
-	background-image: url("../img/menu.png");
+	background-image: url("../assets/menu.png");
 	background-position: center;
 	background-size: 1.5rem;
 	background-repeat: no-repeat;
@@ -153,6 +155,11 @@ a:hover::after, .here a::after {
 	width: 100%;
 }
 
+img {
+	max-width: 100%;
+	height: auto;
+}
+
 h1, h2, h3 {
 	font-family: "SF Display", "Lato", "Roboto", sans-serif;
 	font-weight: 300;
@@ -188,7 +195,7 @@ blockquote {
 	background-color: #474747;
 	
 	font-style: italic;
-	text-indent: 1em;
+	text-indent: var(--text-indent);
 }
 
 .read-more {
@@ -198,7 +205,13 @@ blockquote {
 .post p {
 	margin-bottom: .5rem;
 	
-	text-indent: 2em;
+	text-indent: var(--text-indent);
+}
+
+.post p img:only-child {
+	margin: 0 auto;
+	
+	display: block;
 }
 
 ul {
