--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,7 @@ img {
 	height: auto;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
 	font-family: "SF Display", "Lato", "Roboto", sans-serif;
 	font-weight: 300;
 	font-weight: 100;
@@ -172,6 +172,7 @@ h1, h2, h3 {
 h1 { font-size: 2rem; font-weight: 300; font-weight: 100; }
 h2 { font-size: 2rem; font-weight: 300; font-weight: 200; }
 h3 { font-size: 1.75rem; font-weight: 300; }
+h4 { font-size: 1.5rem; font-weight: 300; font-style: italic; }
 
 hr {
 	margin: .5rem 0;
