--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ h1, h2, h3, h4 {
 h1 { font-size: 2rem; font-weight: 300; font-weight: 100; }
 h2 { font-size: 2rem; font-weight: 300; font-weight: 200; }
 h3 { font-size: 1.75rem; font-weight: 300; }
-h4 { font-size: 1.5rem; font-weight: 300; font-style: italic; }
+h4 { font-size: 1.25rem; font-weight: 500; }
 
 hr {
 	margin: .5rem 0;
