--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ header > div.container > * {
 	line-height: 3rem;
 }
 
-header h1 {
+header h6 {
 	float: left;
 	
 	margin: 0 .5rem;
@@ -160,7 +160,7 @@ img {
 	height: auto;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h6 {
 	font-family: "SF Display", "Lato", "Roboto", sans-serif;
 	font-weight: 300;
 	font-weight: 100;
@@ -173,6 +173,7 @@ h1 { font-size: 2rem; font-weight: 300; font-weight: 100; }
 h2 { font-size: 2rem; font-weight: 300; font-weight: 200; }
 h3 { font-size: 1.75rem; font-weight: 300; }
 h4 { font-size: 1.25rem; font-weight: 500; }
+h6 { font-size: 2rem; font-weight: 300; font-weight: 100; }
 
 hr {
 	margin: .5rem 0;
