--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ html, body {
 	--thin-border-size: .125rem;
 	--thin-border-color: #1f1f1f;
 	
-	--text-indent: 2em;
+	--text-indent: 0em;
 }
 
 body {
@@ -122,6 +122,7 @@ a:link,  a:visited {
 	color: var(--link-color);
 	
 	text-decoration: none;
+	text-indent: 0;
 }
 
 /* a:hover {
