Fixes and polish

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 
 		<footer>
-			<p>Thank. &ndash; <span >&copy;2018</span> V360Tech</p>
+			<p><span id="footer-note">This is a placeholder!</span> &ndash; <span>2018</span> V360Tech</p>
 		</footer>
