--- a/css/home.scss
+++ b/css/home.scss
@@ -18,13 +18,22 @@ div#superhero {
 	align-items: center;
 	
 	& > * {
-		max-width: 32;
+		max-width: 24rem;
 		
 		text-align: center;
 		
 		&:not(img) {
-			text-shadow: 0 1px 4px black;
+			text-shadow:
+				1px  0 4px black,
+				0  1px 4px black,
+				-1px 0 4px black,
+				0 -1px 4px black
+			;
 		}
+	}
+	
+	h1 {
+		font-size: 2.5rem;
 	}
 }
 
@@ -32,48 +41,18 @@ div#superhero {
 div#profile-container {
 	float: left;
 	
-	div.superhero-content {
-		display: flex;
-		
-		flex-direction: column;
-		
-		justify-content: center;
-		justify-items: center;
-		align-content: center;
-		align-items: center;
-		
-		& > * {
-			
-		}
-		
-		h1, p {
-			max-width: 32rem;
-		}
-	}
+	margin-right: 1rem;
+	margin-bottom: .25rem;
 	
-	div.superhero-background {
-		background-color: black;
-		background-size: cover;
-		
-		position: absolute;
-		top: 0; bottom: 0;
-		left: 0; right: 0;
-		
-		transform: translateZ(-1rem) scale(2);
-	}
-}
-
-/* Profile Picture */
-div#profile-container {
-	width: 6rem;
-	height: 6rem;
+	width: 4rem;
+	height: 4rem;
 	
 	img#profile {
-		border: solid var(--thin-border-size) rgba(0, 0, 0, .5);
+		border: solid var(--thin-border-size) rgba(0, 0, 0, .5); /*#0000007f*/
 		border-radius: .5rem;
 		
-		width: 6rem;
-		height: 6rem;
+		width: 4rem;
+		height: 4rem;
 		
 		box-shadow: 0 .375rem .25rem -.25rem #1f1f1f;
 	}
