Reversed change to hero image, improved most things

--- a/css/showcase.scss
+++ b/css/showcase.scss
@@ -18,7 +18,7 @@
 		
 		max-width: 32rem;
 		
-		background-color: #3f3f3fcf;
+		background-color: var(--overlay-color);
 	}
 	
 	&:nth-child(odd) {
