--- a/css/home.scss
+++ b/css/home.scss
@@ -4,8 +4,9 @@
 div#superhero {
 	display: flex;
 	
-	min-height: 75vh;
+	min-height: 80vh;
 	
+	background-image: linear-gradient(var(--overlay-color), var(--overlay-color)), url("/assets/Banner.jpg");
 	background-color: black;
 	background-position: center;
 	background-size: cover;
@@ -23,8 +24,15 @@ div#superhero {
 		text-align: center;
 	}
 	
-	h1 {
+	h2 {
+		margin: 1rem;
+		
 		font-size: 2.5rem;
+	}
+	
+	p {
+		font-size: 1.5rem;
+		line-height: 1.5em;
 	}
 }
 
@@ -36,13 +44,13 @@ div#profile-container {
 	height: 5rem;
 	
 	img#profile {
-		border: solid var(--thin-border-size) rgba(0, 0, 0, .5); /*#0000007f*/
+		border: solid var(--thin-border-size) var(--overlay-color);
 		border-radius: .5rem;
 		
 		width: 5rem;
 		height: 5rem;
 		
-		box-shadow: 0 .375rem .25rem -.25rem #1f1f1f;
+		// box-shadow: 0 .375rem .25rem -.25rem #1f1f1f;
 	}
 	
 	&:hover img#profile {
