--- a/css/styles.scss
+++ b/css/styles.scss
@@ -30,6 +30,8 @@ html, body {
 	
 	--overlay-color: rgba(0, 0, 0, .5);
 	
+	--header-height: 3rem;
+	
 	--text-indent: 0em;
 }
 
@@ -45,14 +47,14 @@ body {
 /* Header Layout */
 header {
 	display: block;
-	position: sticky;
+	position: fixed;
 	
 	border-bottom: solid 1px #2f2f2f;
 	
 	top: 0;
 	
 	width: 100%;
-	height: 3rem;
+	height: var(--header-height);
 	
 	background-color: black;
 	
@@ -65,16 +67,16 @@ header {
 		
 		padding: 0 .5rem;
 		
-		height: 3rem;
+		height: var(--header-height);
 		
 		> * {
 			display: inline-block;
 			
-			height: 3rem;
+			height: var(--header-height);
 			
 			vertical-align: top;
 			
-			line-height: 3rem;
+			line-height: var(--header-height);
 		}
 	}
 	
@@ -83,6 +85,8 @@ header {
 		float: left;
 		
 		margin: 0 .5rem;
+		
+		font-size: calc(var(--header-height) - 1rem);
 	}
 	
 	// Nav Stuff
@@ -96,21 +100,25 @@ header {
 		
 		margin: .5rem 0 .5rem .5rem;
 		
-		width: 2rem;
-		height: 2rem;
+		width: calc(var(--header-height) - 1rem);
+		height: calc(var(--header-height) - 1rem);
 		
 		background-image: url("../assets/menu.png");
 		background-position: center;
-		background-size: 1.5rem;
+		background-size: calc(var(--header-height) - 1.5rem);
 		background-repeat: no-repeat;
 	}
 }
 
 /* Section Layout */
-section > :last-child {
-	border-bottom: solid var(--thin-border-size) var(--thin-border-color);
+section {
+	padding-top: var(--header-height);
 	
-	box-shadow: 0 .25rem .25rem -.25rem #1f1f1f;
+	& > :last-child {
+		border-bottom: solid var(--thin-border-size) var(--thin-border-color);
+		
+		box-shadow: 0 .25rem .25rem -.25rem #1f1f1f;
+	}
 }
 
 footer {
