--- a/css/styles.scss
+++ b/css/styles.scss
@@ -49,7 +49,7 @@ header {
 	display: block;
 	position: fixed;
 	
-	border-bottom: solid 1px #2f2f2f;
+	// border-bottom: solid 1px #2f2f2f;
 	
 	top: 0;
 	
