Better Hero scaling and adjustments to the overlay color

--- a/css/home.scss
+++ b/css/home.scss
@@ -4,7 +4,9 @@
 div#superhero {
 	display: flex;
 	
-	min-height: calc(100vh - var(--header-height));
+	min-height: 32rem;
+	
+	height: calc(100vh - var(--header-height));
 	
 	background-image: linear-gradient(var(--overlay-color), var(--overlay-color)), url("/assets/Banner.jpg");
 	background-color: black;
