Moved around some header tags

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,8 @@
 		{% include header.html %}
 		<section>
 			<div class="container post">
-				<h2>{{ page.title }}</h2>
-				{% if page.subtitle %}<h4>{{ page.subtitle }}</h4>{% endif %}
+				<h1>{{ page.title }}</h1>
+				{% if page.subtitle %}<h3>{{ page.subtitle }}</h3>{% endif %}
 				<aside>{{ page.date | date: "%B %d, %Y" }}{% if page.update %}, updated {{ page.update | date: "%B %d, %Y" }}{% endif %}</aside>
 				{{ content }}
 				{% if page.tags.size > 0 %}<aside>Tag{% if page.tags.size > 1 %}s{% endif %}:  {{ page.tags | join: ", " }}</aside>{% endif %}
@@ -20,10 +20,10 @@
 				<div id="disqus_thread"></div>
 				<script>
 					(function() {
-					var d = document, s = d.createElement('script');
-					s.src = 'https://v360github.disqus.com/embed.js';
-					s.setAttribute('data-timestamp', +new Date());
-					(d.head || d.body).appendChild(s);
+						var d = document, s = d.createElement("script");
+						s.src = "https://v360github.disqus.com/embed.js";
+						s.setAttribute("data-timestamp", +new Date());
+						(d.head || d.body).appendChild(s);
 					})();
 				</script>
 				{% endif %}
