--- a/_includes/headTags.html
+++ b/_includes/headTags.html
@@ -1,5 +1,16 @@
+		<!-- Useful page info -->
 		<meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width" />
+		
+		<!-- Resources -->
         <link rel="stylesheet" href="/css/styles.css" />
 		<script src="/js/script.js"></script>
+		
+		<!-- Favicon -->
 		<link rel="icon" href="/favicon.png" />
+		
+		<!-- Pretty colors -->
+		<meta name="theme-color" content="#000000">
+		<meta name="msapplication-TileColor" content="#000000">
+		<meta name="msapplication-navbutton-color" content="#000000">
+		<meta name="apple-mobile-web-app-status-bar-style" content="#000000">
