--- a/css/styles.scss
+++ b/css/styles.scss
@@ -353,8 +353,9 @@ div.button-set {
 		content: none;
 	}
 	
-	& + & {
-		margin-left: .25rem;
+	&:not(:last-child) {
+		margin-right: .25rem;
+		margin-bottom: .25rem;
 	}
 }
 
