--- a/css/styles.scss
+++ b/css/styles.scss
@@ -424,7 +424,8 @@ header::after,
 				width: calc(100% - var(--header-height));
 				height: var(--header-height);
 				
-				overflow-x: scroll;
+				overflow-x: auto;
+				overflow-y: hidden;
 				
 				white-space: nowrap;
 			}
