just gonna upload what I have and mess with this later

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 			<header>
 				<div class="container">
 					<h6>V360</h6>
-					<span id="toggle-nav" class="buttonlike"></span>
+					<div id="toggle-nav" class="buttonlike"></div>
 					<nav id="header-nav">
 						<ul>
 							<li><a href="/">Home</a></li>
