please update github

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 						<ul>
 							<li><a href="/">Home</a></li>
 							<li><a href="/blog/">Blog</a></li>
-							<li><a href="/blog/">I'm not testing on production, you're testing on production</a></li>
+							<li><a href="/notEvenSomethingThatExistsOnMySite/">I'm not testing on production, you're testing on production</a></li>
 						</ul>
 					</nav>
 				</div>
