--- a/css/styles.scss
+++ b/css/styles.scss
@@ -94,8 +94,9 @@ header {
 		nav#header-nav {
 			float: right;
 			
-			width: calc(100% - var(--header-height) + 1rem);
 			height: var(--header-height);
+			
+			max-width: calc(100% - var(--header-height) + 1rem);
 			
 			overflow-x: auto;
 			overflow-y: hidden;
