--- a/css/styles.scss
+++ b/css/styles.scss
@@ -89,37 +89,37 @@ header {
 			
 			font-size: calc(var(--header-height) - 1rem);
 		}
+
+		// Nav Stuff
+		nav#header-nav {
+			float: right;
+			
+			height: var(--header-height);
+			
+			max-width: calc(100% - var(--header-height) + 1rem);
+			
+			overflow-x: auto;
+			overflow-y: hidden;
+			
+			white-space: nowrap;
+		}
+		
+		// Hamburger button
+		div#toggle-nav {
+			display: none;
+			float: right;
+			
+			margin: .5rem 0 .5rem .5rem;
+			
+			width: calc(var(--header-height) - 1rem);
+			height: calc(var(--header-height) - 1rem);
+			
+			background-image: url("../assets/menu.png");
+			background-position: center;
+			background-size: calc(var(--header-height) - 1.5rem);
+			background-repeat: no-repeat;
+		}
 	}
-}
-
-// Nav Stuff
-nav#header-nav {
-	float: right;
-	
-	height: var(--header-height);
-	
-	max-width: calc(100% - var(--header-height) + 1rem);
-	
-	overflow-x: auto;
-	overflow-y: hidden;
-	
-	white-space: nowrap;
-}
-
-// Hamburger button
-div#toggle-nav {
-	display: none;
-	float: right;
-	
-	margin: .5rem 0 .5rem .5rem;
-	
-	width: calc(var(--header-height) - 1rem);
-	height: calc(var(--header-height) - 1rem);
-	
-	background-image: url("../assets/menu.png");
-	background-position: center;
-	background-size: calc(var(--header-height) - 1.5rem);
-	background-repeat: no-repeat;
 }
 
 /* Section Layout */
@@ -417,16 +417,16 @@ header::after,
 /* @medias */
 
 @media (max-width: 32rem) {
-	header > div.container {
-		div#toggle-nav {
+	header {
+		& > div.container div#toggle-nav {
 			display: block;
 		}
 		
-		nav#header-nav {
+		& > div.containernav#header-nav {
 			display: none;
 		}
 		
-		&.show-nav {
+		&.show-nav > div.container {
 			nav#header-nav {
 				display: block;
 			}
