--- a/css/styles.scss
+++ b/css/styles.scss
@@ -49,12 +49,13 @@ header {
 	display: block;
 	position: fixed;
 	
-	// border-bottom: solid 1px #2f2f2f;
-	
 	top: 0;
 	
+	min-height: var(--header-height);
+	
 	width: 100%;
-	height: var(--header-height);
+	
+	max-height: calc(var(--header-height) * 2);
 	
 	background-color: black;
 	
@@ -66,8 +67,10 @@ header {
 		display: block;
 		
 		padding: 0 .5rem;
+	
+		min-height: var(--header-height);
 		
-		height: var(--header-height);
+		max-height: calc(var(--header-height) * 2);
 	
 		@extend .unselectable;
 		
@@ -94,10 +97,6 @@ header {
 		nav#header-nav {
 			float: right;
 			
-			height: var(--header-height);
-			
-			max-width: calc(100% - var(--header-height) + .5rem);
-			
 			overflow-x: auto;
 			overflow-y: hidden;
 			
@@ -118,6 +117,24 @@ header {
 			background-position: center;
 			background-size: calc(var(--header-height) - 1.5rem);
 			background-repeat: no-repeat;
+		}
+	}
+	
+	&.show-nav {
+		height: calc(var(--header-height) * 2);
+		
+		& > div.container {
+			height: calc(var(--header-height) * 2);
+			
+			nav#header-nav {
+				display: block;
+				
+				width: 100%;
+			}
+			
+			div#toggle-nav {
+				display: block;
+			}
 		}
 	}
 }
@@ -429,10 +446,6 @@ header::after,
 		&.show-nav > div.container {
 			nav#header-nav {
 				display: block;
-			}
-			
-			h6 {
-				display: none;
 			}
 		}
 	}
